Binary graph reader and/or writer

--- a/networkit/cpp/io/CMakeLists.txt
+++ b/networkit/cpp/io/CMakeLists.txt
@@ -1,9 +1,11 @@
 networkit_add_module(io
     BinaryEdgeListPartitionReader.cpp
     BinaryEdgeListPartitionWriter.cpp
-    BinaryPartitionReader.cpp
+	BinaryGraphReader.cpp
+	BinaryGraphWriter.cpp
+	BinaryPartitionReader.cpp
     BinaryPartitionWriter.cpp
-    CoverReader.cpp
+	CoverReader.cpp
     CoverWriter.cpp
     DGSReader.cpp
     DibapGraphReader.cpp
@@ -28,13 +30,14 @@ networkit_add_module(io
     MatrixMarketReader.cpp
     PartitionReader.cpp
     PartitionWriter.cpp
-    RasterReader.cpp
+	PrefixVarint.cpp
+	RasterReader.cpp
     SNAPEdgeListPartitionReader.cpp
     SNAPGraphReader.cpp
     SNAPGraphWriter.cpp
     ThrillGraphBinaryReader.cpp
     ThrillGraphBinaryWriter.cpp
-    )
+	)
 
 networkit_module_link_modules(io
     algebraic auxiliary dynamics graph structures)
