Added rpath support for setup.py and consequetive cmake build system.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ set(NETWORKIT_PYTHON "" CACHE STRING "Directory containing Python.h. Implies MON
 set(NETWORKIT_PYTHON_SOABI "" CACHE STRING "Platform specific file extension. Implies MONOLITH=TRUE")
 set(NETWORKIT_WITH_SANITIZERS "" CACHE STRING "Uses sanitizers during the compilation")
 set(NETWORKIT_RELEASE_LOGGING "AUTO" CACHE STRING "Do not compile log messages at levels TRACE or DEBUG (AUTO|ON|OFF)")
+set(NETWORKIT_RPATH "" CACHE STRING "Build specific rpath references.")
 
 set (NETWORKIT_CXX_STANDARD "11" CACHE STRING "CXX Version to compile with. Currently fixed to 11")
 
@@ -225,10 +226,10 @@ if(NETWORKIT_PYTHON)
 	# DSOs on Apple OSes use different conventions for RPATH.
 	if(APPLE)
 		set_target_properties(_NetworKit PROPERTIES
-				INSTALL_RPATH "@loader_path")
+				INSTALL_RPATH "@loader_path;${NETWORKIT_RPATH}")
 	else()
 		set_target_properties(_NetworKit PROPERTIES
-				INSTALL_RPATH "$ORIGIN")
+				INSTALL_RPATH "$ORIGIN;${NETWORKIT_RPATH}")
 	endif()
 
 	target_link_libraries(_NetworKit PRIVATE tlx OpenMP::OpenMP_CXX)
