Compile numerics module

--- a/networkit/cpp/CMakeLists.txt
+++ b/networkit/cpp/CMakeLists.txt
@@ -20,6 +20,7 @@ add_subdirectory("io")
 add_subdirectory("layout")
 add_subdirectory("linkprediction")
 add_subdirectory("matching")
+add_subdirectory("numerics")
 add_subdirectory("overlap")
 add_subdirectory("randomization")
 add_subdirectory("scd")
