--- a/docs/cpp_api/Doxyfile.in
+++ b/docs/cpp_api/Doxyfile.in
@@ -14,7 +14,8 @@ RECURSIVE = YES
 EXCLUDE_PATTERNS = */test/*
 
 OUTPUT_DIRECTORY = @BUILDDIR@
-GENERATE_HTML = YES
+GENERATE_HTML = NO
+GENERATE_XML = YES
 GENERATE_LATEX = NO
 CLASS_GRAPH = NO
 CLASS_DIAGRAMS = NO
