--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ scripts/SparsificationEvaluation/output/
 scripts/SparsificationEvaluation/figures
 input/backbones/
 docs/cpp_api/
+docs/input/
+docs/notebooks/
 Doc/Website
 Doc/Documentation
 sandbox
